# iltumio.dev

./: .gitignore  AlienGhost.ai  CHANGELOG.md  Cargo.toml  README.md  astro.config.mjs  eslint.config.js  eslint.config.mjs  gatsby-config.js  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.mts  wrangler.toml
.astro/: data-store.json  settings.json
.astro/collections/: blog.schema.json
adapters/static/: vite.config.mts  vite.config.ts
netlify/edge-functions/entry.netlify-edge/: entry.netlify-edge.js
public/: _headers  llms.txt  robots.txt
src/: app.rs  entry.netlify-edge.tsx  entry.preview.tsx  global.css  lib.rs  root.tsx  utils.ts
src/components/: cta.rs  current_jobs.rs  header.rs  icons.rs  index.js  job_position.rs  mod.rs  skill.rs  skills.rs  social.rs
src/components/compact-header/: CompactHeader.astro  compact-header.tsx
src/components/cta/: Cta.astro  cta.tsx
src/components/currentJob/: CurrentJob.jsx
src/components/currentJobs/: CurrentJobs.astro  currentJobs.tsx
src/components/header/: Header.astro  header.tsx
src/components/hero/: Hero.jsx
src/components/icons/: CSS3.tsx  Docker.tsx  Ethereum.tsx  Gatsby.tsx  Git.tsx  Github.tsx  HTML5.tsx  Javascript.tsx  LinkedIn.tsx  MongoDB.tsx  MySQL.tsx  Next.tsx  NodeJs.tsx  Nuxt.tsx  ProblemSolving.tsx  React.tsx  Rust.tsx  Sass.tsx  Solana.astro  Solana.tsx  (+7 more)
src/content/: config.ts
src/layouts/: Layout.astro
src/lib/: blog.ts
src/pages/: index.astro  index.js  rss.xml.ts
src/routes/: index.tsx  layout.tsx
(+22 files in other folders)
