[package]
name = "iltumio-dev"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_dom = { version = "0.7" }
wasm-bindgen = "0.2"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
web-sys = "0.3"
js-sys = "0.3"

[features]
default = ["csr"]
csr = ["leptos/csr"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.wee]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"